Made changes in Member Create Request